--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
-
-
-
-<h:head>
-	<title><h:outputText value="PDV Maia" /></title>
-</h:head>
-
-<h:body>
-	<h3>
-		<h:outputText value="Bem Vindo!!" />
-	</h3>
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:b="http://bootsfaces.net/ui" xmlns:p="http://primefaces.org/ui">
+<ui:composition template="/WEB-INF/template/template.xhtml">
 	
+	<ui:define name="titulo"> PDV Maia 2.0</ui:define>
+	
+	<ui:define name="conteudo">
+		<h1>Bem Vindo!</h1>
+		
+	</ui:define>
 
-</h:body>
+</ui:composition>
 </html>
